--- a/index.html
+++ b/index.html
@@ -550,20 +550,20 @@
 
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/pyodide/v0.23.0/full/pyodide.js"></script>
-    <script src="js/dropdown_v1_0_1.js"></script>
-    <script src="js/mandelbrot_v1.js"></script>
+    <script src="js/dropdown_v1_0_2.js"></script>
+    <script src="js/mandelbrot_v1_0_1.js"></script>
     <script src="js/zettelkasten_v1.js"></script>
 
     <script defer type="module" src="/embeddings.js"></script>
 
 
-    <script src="js/interface_v1.js"></script>
+    <script src="js/interface_v1_0_1.js"></script>
 
-    <script type="module" src="/webLLM/webllm_v1.ts" defer></script>
+    <script type="module" src="/webLLM/webllm_v1_0_1.ts" defer></script>
 
-    <script src="js/ainodes_v1_0_0.js"></script>
-    <script src="js/ai_v1_0_2.js"></script>
-    <script src="js/searchapi_v1_0_0.js"></script>
+    <script src="js/ainodes_v1_0_1.js"></script>
+    <script src="js/ai_v1_0_3.js"></script>
+    <script src="js/searchapi_v1_0_1.js"></script>
     <script src="js/record_v1.js"></script>
 
 </body>
