--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <title>Neurite</title>
     <link rel="stylesheet" type="text/css" href="./styles_v1.css">
     <meta charset="UTF-8">
+
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5/lib/codemirror.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5/addon/scroll/simplescrollbars.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5/lib/codemirror.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5/addon/scroll/simplescrollbars.css">
+
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css" rel="stylesheet" />
     <style type="text/css">
         .cm-node {
@@ -518,33 +521,32 @@
             <g id="button-delete" transform="scale(0.125 0.125) translate(1 1)">
                 <rect x="0" y="0" width="16" height="16" fill="RGB(100,100,100)" stroke="none" />
                 <path d="M 1,1 l 3,0 4,4 4,-4 3,0
-	     0,3 -4,4 4,4 0,3
-	     -3,0 -4,-4 -4,4 -3,0
-	     0,-3 4,-4 -4,-4 0,-3 z" fill="RGB(170,170,170)" stroke="none" />
+ 0,3 -4,4 4,4 0,3
+ -3,0 -4,-4 -4,4 -3,0
+ 0,-3 4,-4 -4,-4 0,-3 z" fill="RGB(170,170,170)" stroke="none" />
+                <rect x="0" y="0" width="16" height="16" fill="transparent" stroke="none" />
             </g>
 
             <g id="button-fullscreen" transform="scale(0.125 0.125) translate(21 1)">
                 <rect x="0" y="0" width="16" height="16" fill="RGB(100,100,100)" stroke="none" />
                 <path d="M  1, 1 l 3,0 1.5,1.5 -3,0 0,3 -1.5,-1.5 0,-3 z
-	     M 15, 1 l -3,0 -1.5,1.5 3,0 0,3 1.5,-1.5 0,-3 z
-	     M 15,15 l -3,0 -1.5,-1.5 3,0 0,-3 1.5,1.5 0,3 z
-	     M  1,15 l 3,0 1.5,-1.5 -3,0 0,-3 -1.5,1.5 0,3 z
-	     M  4, 4 l 2,0 1,1 -2,0 0,2 -1,-1 0,-2 z
-	     M 12, 4 l -2,0 -1,1 2,0 0,2 1,-1 0,-2 z
-	     M 12,12 l -2,0 -1,-1 2,0 0,-2 1,1 0,2 z
-	     M  4,12 l 2,0 1,-1 -2,0 0,-2 -1,1 0,2 z
-	     " fill="RGB(170,170,170)" stroke="none" />
+ M 15, 1 l -3,0 -1.5,1.5 3,0 0,3 1.5,-1.5 0,-3 z
+ M 15,15 l -3,0 -1.5,-1.5 3,0 0,-3 1.5,1.5 0,3 z
+ M  1,15 l 3,0 1.5,-1.5 -3,0 0,-3 -1.5,1.5 0,3 z
+ M  4, 4 l 2,0 1,1 -2,0 0,2 -1,-1 0,-2 z
+ M 12, 4 l -2,0 -1,1 2,0 0,2 1,-1 0,-2 z
+ M 12,12 l -2,0 -1,-1 2,0 0,-2 1,1 0,2 z
+ M  4,12 l 2,0 1,-1 -2,0 0,-2 -1,1 0,2 z
+ " fill="RGB(170,170,170)" stroke="none" />
+                <rect x="0" y="0" width="16" height="16" fill="transparent" stroke="none" />
             </g>
 
             <g id="button-collapse" transform="scale(0.125 0.125) translate(41 1)">
                 <rect x="0" y="0" width="16" height="16" fill="RGB(100,100,100)" stroke="none" />
                 <circle cx="8" cy="8" r="5.375" stroke="RGB(170,170,170)" stroke-width="2.75" fill="none" />
+                <rect x="0" y="0" width="16" height="16" fill="transparent" stroke="none" />
             </g>
-
         </svg>
-
-
-
     </div>
 
     <script>
@@ -578,6 +580,7 @@
 
 
     <script src="js/interface_v1_0_2.js"></script>
+    <script src="js/editor/editornode.js"></script>
 
     <script type="module" src="/webLLM/webllm_v1_0_2.ts" defer></script>
 
@@ -587,6 +590,7 @@
     <!--<script src="js/aicursor.js"></script>-->
 
     <script src="js/searchapi_v1_0_2.js"></script>
+    <script src="js/createnodes.js"></script>
     <script src="js/record_v1.js"></script>
 
 </body>
