--- a/index.html
+++ b/index.html
@@ -6,14 +6,31 @@
     <link rel="stylesheet" type="text/css" href="./styles_v1.css">
     <meta charset="UTF-8">
 
+    <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.9.179/build/pdf.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5/lib/codemirror.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5/addon/scroll/simplescrollbars.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5/lib/codemirror.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5/addon/scroll/simplescrollbars.css">
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css" rel="stylesheet" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.3/purify.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>-->
+
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/pyodide/v0.23.0/full/pyodide.js"></script>
     <style type="text/css">
+        .node-title {
+            color: paleturquoise;
+            cursor: pointer;
+            text-decoration: underline;
+        }
+
         .cm-node {
             color: #D15050;
         }
@@ -200,22 +217,22 @@
                                 <div class="gridLayout">
 
                                     <div class="settingsSlider">
-                                        <label for="cSlider">Brightness: <span id="c_value"></span></label>
+                                        <label for="cSlider">Brightness<span id="c_value"></span></label>
                                         <input type="range" min="0" max="255" id="cSlider" value="128">
                                     </div>
 
                                     <div class="settingsSlider">
-                                        <label for="sSlider">Saturation: <span id="s_value"></span></label>
+                                        <label for="sSlider">Saturation<span id="s_value"></span></label>
                                         <input type="range" min="0" max="255" id="sSlider" value="127">
                                     </div>
 
                                     <div class="settingsSlider">
-                                        <label for="outer_opacity">Outer Opacity: <span id="outer_opacity_value"></span></label>
+                                        <label for="outer_opacity">Outer Opacity<span id="outer_opacity_value"></span></label>
                                         <input id="outer_opacity" type="range" min="0" max="100" value="100">
                                     </div>
 
                                     <div class="settingsSlider">
-                                        <label for="inner_opacity">Inner Opacity: <span id="inner_opacity_value"></span></label>
+                                        <label for="inner_opacity">Inner Opacity<span id="inner_opacity_value"></span></label>
                                         <input id="inner_opacity" type="range" min="0" max="100" value="100">
                                     </div>
 
@@ -313,7 +330,7 @@
                                 <td><input type="checkbox" id="novelty-checkbox"><label for="novelty-checkbox"><strong>: Novelty<br />(Shuffled Wiki Results)</strong></label></td>
                             </tr>
                             <tr>
-                                <td>Extras</td>
+                                <td>Shift + Alt + Double click to create a code editor node.</td>
                                 <td>
                                     <input type="checkbox" id="ai-nodes-checkbox">
                                     <label for="ai-nodes-checkbox"><strong>: AI Generated AI Nodes <br />(or, Alt + Double Click / type LLM:)</strong></label>
@@ -390,6 +407,8 @@
                             <div class="api-buttons">
                                 <button class="key-button" onclick="saveKeys()">Save Keys</button>
                                 <button class="key-button" onclick="clearKeys()">Clear Keys</button>
+                                <button class="key-button" id="saveToFileButton" onclick="saveKeysToFile()">Keys .txt</button>
+                                <button class="key-button" id="loadFromFileButton" onclick="loadKeysFromFile()">Load Keys</button>
                             </div>
                         </div>
                         <br />
@@ -441,7 +460,7 @@
                         <label for="inputTextExtract">Text:</label><br>
                         <textarea id="inputTextExtract" rows="10" cols="50" class="zettelkasten"></textarea><br>
                         <div class="button-container">
-                            <button id="chunkAndStoreButton" class="linkbuttons">Store Chunks</button>
+                            <button id="chunkAndStoreButton" class="linkbuttons">Store Key & Text</button>
                             <button onclick="deleteSelectedKeys()" class="linkbuttons">Delete Key(s)</button>
                         </div>
                         <strong><p style="font-weight: bold;">Stored Keys</p></strong>
@@ -564,14 +583,6 @@
         }
     </script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.3/purify.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>-->
-
-
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/pyodide/v0.23.0/full/pyodide.js"></script>
     <script src="js/dropdown_v1_0_3.js"></script>
     <script src="js/mandelbrot_v1_0_1.js"></script>
     <script src="js/zettelkasten_v1.js"></script>
