--- a/index.html
+++ b/index.html
@@ -376,7 +376,10 @@
                                 <td><input type="checkbox" id="novelty-checkbox"><label for="novelty-checkbox"><strong>: Novelty<br />(Shuffled Wiki Results)</strong></label></td>
                             </tr>
                             <tr>
-                                <td>Shift + Alt + Double click to create a code editor node.</td>
+                                <td>
+                                    <input type="checkbox" id="use-all-connected-ai-nodes" />
+                                    <label for="use-all-connected-ai-nodes"><strong>Send messages between all connected ai nodes.</strong> (rather than the closest connected Ai nodes)</label>
+                                </td>
                                 <td>
                                     <input type="checkbox" id="ai-nodes-checkbox">
                                     <label for="ai-nodes-checkbox"><strong>: AI Generated AI Nodes <br />(or, Alt + Double Click / type LLM:)</strong></label>
