Messages between connected ai nodes.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/pyodide/v0.23.0/full/pyodide.js"></script>
-  <script type="module" crossorigin src="./assets/index.e2913eb5.js"></script>
+  <script type="module" crossorigin src="./assets/index.380abd1a.js"></script>
   <link rel="stylesheet" href="./assets/index.a076fd13.css">
 </head>
 
@@ -373,7 +373,10 @@
                                 <td><input type="checkbox" id="novelty-checkbox"><label for="novelty-checkbox"><strong>: Novelty<br />(Shuffled Wiki Results)</strong></label></td>
                             </tr>
                             <tr>
-                                <td>Shift + Alt + Double click to create a code editor node.</td>
+                                <td>
+                                    <input type="checkbox" id="use-all-connected-ai-nodes" />
+                                    <label for="use-all-connected-ai-nodes"><strong>Send messages between all connected ai nodes.</strong> (rather than the closest connected Ai nodes)</label>
+                                </td>
                                 <td>
                                     <input type="checkbox" id="ai-nodes-checkbox">
                                     <label for="ai-nodes-checkbox"><strong>: AI Generated AI Nodes <br />(or, Alt + Double Click / type LLM:)</strong></label>
