Halt questioning nodes, favicon
allow for question loop to halt when pause is clicked.
added favicon.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Neurite</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="./styles_v1.css">
     <meta charset="UTF-8">
 
