halt questioning nodes, favicon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Neurite</title>
+    <link rel="icon" href="./assets/favicon.13fdf577.ico" type="image/x-icon">
     
     <meta charset="UTF-8">
 
